# erlang-vc

./: README.md  rebar.config
.github/workflows/: erlang.yml
crates/native/: Cargo.toml
crates/native/src/: atoms.rs  lib.rs  vc.rs
src/: erlang_vc.app.src  erlang_vc.erl
test/: basic_test.erl
